--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -4,10 +4,8 @@ on:
   - cron: "30 * * * *"
 
 jobs:
-  check_indus:
-
+  newman:
     runs-on: ubuntu-latest
-
     steps:
       - uses: actions/checkout@master
       - uses: matt-ball/newman-action@master
