--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -12,3 +12,5 @@ jobs:
         with:
           collection: postman_collection.json
           environment: postman_environment.json
+      - name: Launch newman
+        run:  newman run https://www.getpostman.com/collections/631643-f695cab7-6878-eb55-7943-ad88e1ccfd65-JsLv
