--- a/.github/workflows/monitor.yml
+++ b/.github/workflows/monitor.yml
@@ -1,7 +1,7 @@
 name: Monitoring
-on:
-  schedule:
-  - cron: "1-59 * * * *"
+on: [push]
+#  schedule:
+#  - cron: "1-59 * * * *"
 
 jobs:
   newman:
