--- a/.github/workflows/monitor.yml
+++ b/.github/workflows/monitor.yml
@@ -10,5 +10,7 @@ jobs:
       - uses: actions/checkout@master
       - uses: matt-ball/newman-action@master
         with:
+          reporters: json
           collection: postman_collection.json
           environment: postman_environment.json
+          
