--- a/.github/workflows/monitor.yml
+++ b/.github/workflows/monitor.yml
@@ -1,7 +1,7 @@
 name: Monitoring
-on: [push]
-#  schedule:
-#  - cron: "*/1 * * * *"
+on:
+  schedule:
+  - cron: "*/30 * * * *"
 
 jobs:
   newman:
