--- a/.github/workflows/monitor.yml
+++ b/.github/workflows/monitor.yml
@@ -1,9 +1,7 @@
 name: Monitoring
 on:
-  push:
-    branches: [master]
- # schedule:
- # - cron: "*/30 * * * *"
+  schedule:
+  - cron: "*/30 * * * *"
 
 jobs:
   newman:
